<resources>
    <string name="app_name">MusicOn</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drill_emiway_bantai">Drill Emiway Bantai</string>
    <string name="song_image">SongImage</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="down">down</string>
    <string name="home">Home</string>
    <string name="tab_bar_desc">desc</string>
</resources>