<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SongFragment">

    <ImageView
        android:id="@+id/down"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/songName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_down"
        android:contentDescription="@string/down"/>

    <TextView
        android:id="@+id/songName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold_italic"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/drill_emiway_bantai"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/down" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="23dp"
        app:cardCornerRadius="23dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/cardBg"
        app:layout_constraintTop_toBottomOf="@id/songName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:padding="2dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="304dp"
                android:scaleType="center"
                android:padding="12dp"
                android:src="@drawable/drill"
                android:contentDescription="@string/song_image"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="23dp"
        android:layout_marginTop="24dp"
        android:padding="23dp"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@id/card"
        android:soundEffectsEnabled="true"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/songControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        android:gravity="center"
        android:padding="23dp"
        app:layout_constraintTop_toBottomOf="@id/seekbar"
        app:layout_constraintStart_toStartOf="@id/seekbar"
        app:layout_constraintEnd_toEndOf="@id/seekbar">
        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:src="@drawable/ic_play_previous"
            android:contentDescription="@string/previous"/>
        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/previous"/>
        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_next"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:contentDescription="@string/next"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/songControl"
        app:layout_constraintStart_toStartOf="@id/songControl"
        app:layout_constraintEnd_toEndOf="@id/songControl"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:contentDescription="@string/next"/>

        <ImageButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"

            android:layout_marginHorizontal="12dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:contentDescription="@string/next"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/add_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_to_playlist"
            android:layout_marginEnd="12dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:contentDescription="@string/next"/>

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_repeat"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:contentDescription="@string/next"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>